--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,1 +1,11 @@
-<h1>Woop!</h1>
+<% @messages.each do |message| %>
+	<div class="col-md-10 col-md-offset-1">
+		<div class="message">
+			<h2 class="message-title"><%= message.title %></h2>
+			<%= link_to "Join Convo", message, class: "btn-custom" %>
+		</div>
+	</div>
+
+<% end %>
+
+<%= link_to "Post Message", new_message_path %>
