--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,11 @@
   <body>
     <nav class="navbar navbar-default">
       <div class="container">
-        <div ckass="navbar-header">
+        <div class="navbar-header">
           <%= link_to "ESPN FAN FORUM", root_path, class: "navbar-brand" %>
         </div>
 
-        <ul class="navbar nav navbar-right">
+        <ul class="navbar-nav nav navbar-right">
           <% if user_signed_in? %>
             <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
           <% else %>
@@ -25,10 +25,10 @@
           <% end %>
         </ul>
 
-       <% if user_signed_in? %>
-        <p><%= link_to "Post It", new_message_path, class: "navbar-text navbar-link" %></p>
-       <% end %>
-      </div> 
+        <% if user_signed_in? %>
+          <p><%= link_to "Post It", new_message_path, class: "navbar-text navbar-link" %></p>
+        <% end %>
+      </div>
     </nav>
 
 
